# Matrix

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  run_docker.sh
.github/workflows/: .workflow.yml
docker/: Dockerfile
matrix/: CMakeLists.txt  exceptions.h  matrix.h
tests/: CMakeLists.txt  base_operators.h  constructors.h  det.py  det_counter.py  determinant.h  test.sh  unit_test.cpp  uptriang_test.cpp
tests/e2e/: CMakeLists.txt  test.sh
tests/gtest/: CMakeLists.txt  constructors.h
tests/gtest/path_getter/: path_getter.h.erb
tests/path_getter/: path_getter.rb
tests/test_files/: file1.txt  file10.txt  file11.txt  file12.txt  file12ans.txt  file13.txt  file13ans.txt  file14.txt  file15.txt  file16.txt  file17.txt  file18.txt  file19.txt  file19ans.txt  file2.txt  file20.txt  file21.txt  file22.txt  file23.txt  file24.txt  file25.txt  file25ans.txt  file26.txt  file27.txt  file28.txt  file28ans.txt  file29.txt  file29ans.txt  file3.txt  file30.txt  file4.txt  file5.txt  file6.txt  file7.txt  file8.txt  file9.txt
